--- a/package.json
+++ b/package.json
@@ -1,16 +1,47 @@
 {
-	"name": "NodejsStarterApp",
-	"version": "0.0.1",
-	"private": true,
-	"scripts": {
-		"start": "node app.js"
-	},
-	"dependencies": {
-		"express": "4.13.x",
-		"cfenv": "1.0.x"
-	},
-	"repository": {},
-	"engines": {
-		"node": "4.x"
-	} 
+  "name": "phonebot",
+  "version": "1.0.0",
+  "description": "Slackbot to make phonecalls using Twilio and IBM Watson",
+  "main": "app.js",
+  "directories": {
+    "test": "test"
+  },
+  "dependencies": {
+    "async": "^0.9.0",
+    "cfenv": "^1.0.0",
+    "loglevel": "^1.2.0",
+    "request": "^2.55.0",
+    "express-xml-bodyparser": "^0.0.7",
+    "promise": "^7.0.1",
+    "body-parser": "^1.12.3",
+    "express": "^4.12.3",
+    "twilio": "^2.2.0",
+    "watson-developer-cloud": "^0.9.9",
+    "sox": "^0.1.0",
+    "tmp": "^0.0.25",
+    "commander": "^2.6.0",
+    "http-post": "^0.1.1"
+  },
+  "devDependencies": {
+    "mocha": "^2.2.5",
+    "mocha-eslint": "^0.1.7",
+    "mockery": "^1.4.0",
+    "requestbin": "^1.1.1"
+  },
+  "scripts": {
+    "test": "mocha test/unit",
+    "integration-test": "mocha test/integration",
+    "install": "node admin.js track",
+    "start": "node app.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/IBM-Bluemix/phonebot.git"
+  },
+  "author": "James Thomas",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/IBM-Bluemix/phonebot/issues"
+  },
+  "homepage": "https://github.com/IBM-Bluemix/phonebot"
 }
