--- a/manifest.yml
+++ b/manifest.yml
@@ -3,6 +3,9 @@ declared-services:
   twilio:
     label: Twilio
     plan: 'user-provided'
+  slack_webhooks:
+    label: slack_webhooks
+    plan: 'user-provided'   
   speech_to_text:
     label: speech_to_text
     plan: free
@@ -14,4 +17,4 @@ applications:
   services:
   - twilio
   - speech_to_text
-  
+  - slack_webhooks
